// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getArrayLabel should return Item if label is undefined 1`] = `
<div>
  <span>
    Item
  </span>
   
  <small>
    01
  </small>
</div>
`;

exports[`getArrayLabel should return a label with a number suffix for string labels 1`] = `
<div>
  <span>
    Label
  </span>
   
  <small>
    10
  </small>
</div>
`;
